# web-plugin-template

./: .env  .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: release-product.yml  reveal-secrets.yml  secret.yml
cmake/: CMakeVersion.cmake  GithubEnv.cmake
cmake/timestamp/: CMakeLists.txt  timestamp.c  timestamp.h
installers/: License.txt  Readme.rtf
installers/mac/: build.sh  package.sh
installers/mac/Resources/: entitlements.plist
installers/mac/Resources/autochroma/postinstall/: postinstall
installers/mac/Resources/clippy/postinstall/: postinstall
installers/mac/Resources/deepwater/postinstall/: postinstall
installers/mac/Resources/freqflip/postinstall/: postinstall
installers/mac/Resources/humans/postinstall/: postinstall
installers/mac/Resources/neu-test/postinstall/: postinstall
installers/mac/Resources/pitch-shift/postinstall/: postinstall
installers/mac/Resources/sampler2/postinstall/: postinstall
installers/mac/Resources/shearwater/postinstall/: postinstall
installers/win/: installer.iss
modules/: CMakeLists.txt
modules/choc/: LICENSE.md  README.md
scripts/: debug_sign.sh  download-resources.py  release.sh
src/: CMakeLists.txt  Parameters.yaml  version.h.in
src/processor/: PluginProcessor.cpp  PluginProcessor.h  version.h.in
src/ui/: .gitignore  package.json  tailwind.config.js  vite.config.ts
src/ui/src/: App.vue  EnvelopeFollower.ts  RegisterPluginFunctions.ts  main.ts  parameter.ts
src/ui/src/@types/: juce.d.ts  params.d.ts  vuex.d.ts  window.d.ts
src/ui/src/components/: ButtonControl.vue  Footer.vue  GainMeter.vue  Slider.vue  SliderBase.vue  SpreadDisplay.vue
src/ui/src/components/auth/: AuthPanel.vue
src/ui/src/components/controls/button/: Button.vue  ParameterButton.vue  ToggleButton.vue
src/ui/src/components/controls/slider/: ParameterSlider.vue  Slider.vue  TextSlider.vue
src/ui/src/components/presets/: PresetListCategory.vue  PresetPanel.vue  PresetToolbar.vue
src/ui/src/components/settings/: SettingsPanel.vue
src/ui/src/components/slider-views/: CenteredX.vue  GenericSlider.vue  MirrorX.vue
src/ui/src/composables/: controls.ts  mouse.ts  util.ts
src/ui/src/parameter/: Parameter.ts  ParameterConnection.ts  ParameterRange.ts  PluginParameter.ts
src/ui/src/presets/: Preset.ts
src/ui/src/sass/: _variables.scss  context-menu.scss  controls.scss  style.scss  util.scss
src/ui/src/store/: auth.ts  info.ts  parameters.ts  presets.ts  settings.ts  store.ts
